<resources>
    <string name="app_name" translatable="false">Testly</string>
    <string name="app_version" translatable="false">0.1</string>
    <string name="show_password">Show Password</string>
    <string name="intro_key_unique">0.1</string>
    <string name="intro_first_title" translatable="false">Testly</string>
    <string name="intro_first_description">Welcome to Testly!</string>
    <string name="intro_login">LOG IN</string>
    <string name="intro_signup">SIGN UP</string>
    <string name="search_hint">Search …</string>
    <string name="action_search" translatable="false">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_pinned">Pinned</string>
    <string name="nav_menu_improve">Improve</string>
    <string name="nav_menu_prep">Prepare for exam</string>
    <string name="nav_menu_handouts">Handouts</string>
    <string name="nav_menu_pastexam">Past Exam</string>
    <string name="nav_menu_section_provider">Provider</string>
    <string name="nav_menu_create">Create</string>
    <string name="nav_menu_upload">Upload</string>
    <string name="nav_menu_section_developer">Developer</string>
    <string name="nav_menu_dev_chat">Developer Chat</string>
    <string name="nav_menu_section_admin">Admin</string>
    <string name="nav_menu_admin_panel">Admin Panel</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_help">Help</string>
    <string name="nav_menu_feedback">Feedback</string>
    <string name="nav_menu_about">About</string>
    <string name="btn_start_dashboard">Start</string>
    <string name="title_fragment_pinned">Pinned</string>
    <string name="title_fragment_improve">Improve Ability</string>
    <string name="title_fragment_prep">Prepare for exams</string>
    <string name="title_fragment_handouts">Handouts</string>
    <string name="title_fragment_pastexam">Past Exams</string>
    <string name="title_fragment_create">Create cards / sets</string>
    <string name="action_toggle_to_grid">Grid Mode</string>
    <string name="action_toggle_to_list">List Mode</string>
    <string name="title_create_card_title">Name</string>
    <string name="hint_create_card_title">Name</string>
    <string name="title_create_card_subject">Subject</string>
    <string name="title_create_card_type">Type</string>
    <string name="radio_create_card_type_unsorted">Unsorted</string>
    <string name="radio_create_card_type_selection">Selection</string>
    <string name="radio_create_card_type_selection_multiple">Multiple</string>
    <string name="radio_create_card_type_selection_multiple_ordered">Ordered</string>
    <string name="radio_create_card_type_spelling">Spelling</string>
    <string name="title_create_card_question">Question</string>
    <string name="hint_create_card_question">Question</string>
    <string name="title_create_card_options">Options</string>
    <string name="title_create_card_answer">Answer</string>
    <string name="title_create_card_answer_card">Answer Card</string>
    <string name="radio_create_card_answer_card_true">Yes</string>
    <string name="radio_create_card_answer_card_false">No</string>
    <string name="error_create_card_option_cannot_be_blank">Options cannot be blank</string>
    <string name="error_create_card_answer_not_enough">Select at least two answers.</string>
    <string name="error_create_card_mask_not_enough">Mask at least one character.</string>
    <string name="action_preview">Preview</string>
    <string name="btn_preview_cancel">Cancel</string>
    <string name="btn_preview_submit">Submit</string>
    <string name="title_create_set_title">Name</string>
    <string name="hint_create_set_title">Name</string>
    <string name="radio_create_set_type_check">Check</string>
    <string name="radio_create_set_type_test">Test</string>
    <string name="title_create_set_card">Card</string>
    <string name="title_create_set_card_type">Type</string>
    <string name="radio_create_set_card_type_mixed">Mixed</string>
    <string name="radio_create_set_card_type_selection">Selection</string>
    <string name="radio_create_set_card_type_spelling">Spelling</string>
    <string name="title_create_set_card_subject">Subject</string>
    <string name="check_create_set_card_subject_mixed">Mixed</string>
    <string name="error_create_set_subject_not_selected">Set to mixed or select one subject.</string>
    <string name="title_create_set_card_select">Select</string>
    <string name="error_create_set_cards_not_selected">Select at least one card.</string>
    <string name="action_submit">Submit</string>
    <string name="btn_card_boolean_false">No</string>
    <string name="btn_card_boolean_true">Yes</string>
    <string name="title_fragment_upload">Upload files</string>
    <string name="title_fragment_dev_chat">Developer Chat</string>
    <string name="hint_message_dev_chat">Write a message</string>
    <string name="btn_send_dev_chat">SEND</string>
    <string name="title_fragment_admin_panel">Administrator Panel</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_general_title">General</string>
    <string name="pref_account_title">Account</string>
    <string name="pref_account_caption">Signed in as %1$s</string>
    <string name="pref_account_update_email_title">Change email address</string>
    <string name="pref_account_update_password_title">Reset password</string>
    <string name="pref_account_update_password_previous_forgot">Forgot old password?</string>
    <string name="pref_account_update_password_prompt_previous">Old Password</string>
    <string name="pref_account_update_password_prompt_new_first">New Password</string>
    <string name="pref_account_update_password_prompt_new_second">New Password</string>
    <string name="pref_account_logout_title">Logout</string>
    <string name="pref_account_dangerous_title">Danger Zone</string>
    <string name="pref_account_delete_title">Delete Account</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_language_caption" translatable="false">English</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_download_title">Download</string>
    <string name="pref_download_auto">Auto Download All</string>
    <string name="pref_download_auto_caption">Automatically download all available documents.</string>
    <string name="pref_notification_title">Notifications</string>
    <string name="pref_if_send_key" translatable="false">if_notification</string>
    <string name="pref_if_send_title" translatable="false">Turn on or off notifications</string>
    <string name="pref_if_send_caption" translatable="false">yeah</string>
    <string name="pref_advanced_title">Advanced</string>
    <string name="pref_welcome_title">Roll intro</string>
    <string name="pref_welcome_caption">Display the welcome screen.</string>
    <string name="pref_provider_title">Provider Options</string>
    <string name="pref_developer_title" translatable="false">Developer Options</string>
    <string name="pref_developer_caption" translatable="false">You\'re Zaen, right?</string>
    <string name="pref_dev_devbar_title" translatable="false">Show Devbar</string>
    <string name="title_activity_login">Log in</string>
    <string-array name="login_greetings">
        <item>Welcome back, Captain!</item>
        <item>Nice to see you again!</item>
        <item>Glad to have you back!</item>
    </string-array>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_log_in_short">Log in</string>
    <string name="text_sign_in_with_social">Use social account to login</string>
    <string name="text_sign_in_with_email_and_password">Or email and password</string>
    <string name="text_forgot_password"><u>Forgot password?</u></string>
    <string name="text_create_account"><u>Create Account</u></string>
    <string name="error_invalid_email">This email address is invalid.</string>
    <string name="error_invalid_password">Password must be 8 or more chars.</string>
    <string name="error_incorrect_password">This password is incorrect.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_max_length_exceeded">Max length exceeded.</string>
    <string name="error_auth_google_title">Authentication Failure</string>
    <string name="error_auth_google_content">Unknown Error.</string>
    <string name="title_activity_signup">Sign up</string>
    <string-array name="signup_greetings">
        <item>Signing you up for Testly.</item>
        <item>Nice to meet you!</item>
        <item>Hello, newcomer.</item>
    </string-array>
    <string name="title_section_auth">Select one authorization method.</string>
    <string name="signup_info_heading">Oops, looks like you are not signed up yet.\n No worry, just fill out this form please.</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="hint_school">School</string>
    <string name="hint_grade">Grade</string>
    <string name="hint_class">Class</string>
    <string name="error_school_required">Please select a school.</string>
    <string name="error_grade_required">Which grade?</string>
    <string name="error_class_required">Which class?</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_fullname_last">Last</string>
    <string name="prompt_fullname_first">First</string>
    <string name="title_activity_about">About Testly</string>
    <string name="about_info_app_version">Version</string>
    <string name="about_info_app_changelog">Change Log</string>
    <string name="about_info_rate">Rate the app</string>
    <string name="about_title_contributors_authors">Author</string>
    <string name="about_title_contributors_authors_zaen">Zaen</string>
    <string name="about_title_contributors_developers">Developers</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="order_top">TOP POSTS</string>
    <string name="order_new">NEW POSTS</string>
    <string name="order_trending">Trending</string>
    <string name="sort_all">All Post</string>
    <string name="sort_mine">My Post</string>
    <string name="tag_planned" translatable="false">PLANNED</string>
    <string name="hint_title_feedback">New suggestion / problem</string>
    <string name="title_activity_help">Help</string>
    <string name="pref_file_key_account" translatable="false">com.zaen.testly.account</string>
    <string name="pref_file_key_progress" translatable="false">com.zaen.testly.progress</string>
    <string name="pref_if_firststart" translatable="false">com.zaen.testly.testly-1.0</string>
    <string name="pref_github_token" translatable="false">com.zaen.testly.token.github</string>
    <string name="key_pref_dev_devbar" translatable="false">Show Devbar</string>
    <string name="react_positive">OK</string>
    <string name="react_rename">Rename</string>
    <string name="react_change">Change</string>
    <string name="react_logout">Log Out</string>
    <string name="react_delete">Delete</string>
    <string name="react_negative">No</string>
    <string name="react_refuse">Cancel</string>
    <string name="not_implemented_title">Oops!</string>
    <string name="not_implemented_content">Not yet implemented.</string>
    <string name="title_activity_login_sample">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>