<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/ic_menu_home">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_menu_home" />
        <item
            android:id="@+id/nav_pinned"
            android:icon="@drawable/ic_menu_pin"
            android:title="@string/nav_menu_pinned" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/ic_menu_1">
        <item
            android:id="@+id/nav_prep"
            android:icon="@drawable/ic_menu_prep"
            android:title="@string/nav_menu_prep" />
        <item
            android:id="@+id/nav_improve"
            android:icon="@drawable/ic_menu_improve"
            android:title="@string/nav_menu_improve" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/ic_menu_2">
        <item
            android:id="@+id/nav_handouts"
            android:icon="@drawable/ic_menu_pastexam"
            android:title="@string/nav_menu_handouts" />
        <item
            android:id="@+id/nav_pastexam"
            android:icon="@drawable/ic_menu_pastexam"
            android:title="@string/nav_menu_pastexam" />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/ic_menu_other">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_menu_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/nav_menu_help" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_feedback"
            android:title="@string/nav_menu_feedback"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/nav_menu_about" />
    </group>

</menu>
