<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/setting_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:id="@+id/settingAct_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="@dimen/scrollbar_width">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- *General -->
            <android.support.v7.widget.CardView
                android:id="@+id/pref_general_card"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_spacing"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/card_elevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/small_spacing">
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/pref_general_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/medium_spacing"
                        android:paddingEnd="@dimen/medium_spacing"
                        android:paddingTop="@dimen/medium_spacing"
                        android:text="@string/pref_general_title"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold"/>
                    <!-- **Account -->
                    <com.zaen.testly.views.settings.SettingView
                        android:id="@+id/pref_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardItemIcon="gmd_account_box"
                        app:cardItemTitle="@string/pref_account_title"
                        app:cardItemCaption="@string/pref_account_caption"/>
                    <!-- **Language -->
                    <com.zaen.testly.views.settings.SettingView
                        android:id="@+id/pref_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardItemIcon="gmi_globe_alt"
                        app:cardItemTitle="@string/pref_language_title"
                        app:cardItemCaption="@string/pref_language_caption"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- *Notification -->
            <android.support.v7.widget.CardView
                android:id="@+id/pref_notification_card"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_spacing"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/card_elevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/small_spacing">
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/pref_notification_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/medium_spacing"
                        android:paddingEnd="@dimen/medium_spacing"
                        android:paddingTop="@dimen/medium_spacing"
                        android:text="@string/pref_notification_title"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold"/>
                    <!-- **If Notification -->
                    <com.zaen.testly.views.settings.SettingSwitchView
                        android:id="@+id/pref_ifsend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:settingPreferenceKey="@string/pref_if_send_key"
                        app:cardItemIcon="gmd_account_box"
                        app:cardItemTitle="@string/pref_if_send_title"
                        app:cardItemCaption="@string/pref_if_send_caption"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- *Download -->
            <android.support.v7.widget.CardView
                android:id="@+id/pref_download_card"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_spacing"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/card_elevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/small_spacing">
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/pref_download_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/medium_spacing"
                        android:paddingEnd="@dimen/medium_spacing"
                        android:paddingTop="@dimen/medium_spacing"
                        android:text="@string/pref_download_title"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold"/>
                    <!-- **Automatic Download -->
                    <com.zaen.testly.views.settings.SettingSwitchView
                        android:id="@+id/pref_download_auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:settingPreferenceKey="@string/pref_download_auto"
                        app:cardItemIcon="oct_cloud_download"
                        app:cardItemTitle="@string/pref_download_title"
                        app:cardItemCaption="@string/pref_download_auto_caption"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!--*Advanced-->
            <android.support.v7.widget.CardView
                android:id="@+id/pref_advanced_card"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_spacing"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/card_elevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/small_spacing">
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/pref_advanced_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/medium_spacing"
                        android:paddingEnd="@dimen/medium_spacing"
                        android:paddingTop="@dimen/medium_spacing"
                        android:text="@string/pref_advanced_title"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold"/>
                    <!-- **Welcome Screen -->
                    <com.zaen.testly.views.settings.SettingView
                        android:id="@+id/pref_welcome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/small_spacing"
                        android:paddingBottom="@dimen/small_spacing"
                        android:visibility="visible"
                        app:cardItemIcon="faw-film"
                        app:cardItemTitle="@string/pref_welcome_title"
                        app:cardItemCaption="@string/pref_welcome_caption"/>
                    <!-- **Provider Option -->
                    <com.zaen.testly.views.settings.SettingTitleOnlyView
                        android:id="@+id/pref_provider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/small_spacing"
                        android:paddingBottom="@dimen/small_spacing"
                        android:visibility="visible"
                        app:cardItemIcon="faw-user-secret"
                        app:cardItemTitle="@string/pref_provider_title"/>
                    <!-- **Developer Option -->
                    <com.zaen.testly.views.settings.SettingView
                        android:id="@+id/pref_developer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:cardItemIcon="faw-cog"
                        app:cardItemTitle="@string/pref_developer_title"
                        app:cardItemCaption="@string/pref_developer_caption"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>