<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/setting_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:id="@+id/settingAct_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="@dimen/scrollbar_width">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- General -->
            <android.support.v7.widget.CardView
                android:id="@+id/pref_general_card"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_spacing"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/card_elevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/small_spacing">
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/pref_general_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/medium_spacing"
                        android:paddingTop="@dimen/medium_spacing"
                        android:text="@string/pref_general_title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold"/>
                    <com.zaen.testly.views.settings.SettingView
                        android:id="@+id/pref_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:settingCaption="@string/pref_account_caption"
                        app:settingIcon="gmd_account_box"
                        app:settingTitle="@string/pref_account_title"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- Theme -->
            <android.support.v7.widget.CardView
                android:id="@+id/pref_theme_card"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_spacing"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/card_elevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/small_spacing">
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/pref_theme_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/medium_spacing"
                        android:paddingTop="@dimen/medium_spacing"
                        android:text="@string/pref_theme_title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- Notification -->
            <android.support.v7.widget.CardView
                android:id="@+id/pref_notification_card"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_spacing"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/card_elevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/small_spacing">
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/pref_notification_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/medium_spacing"
                        android:paddingTop="@dimen/medium_spacing"
                        android:text="@string/pref_notification_title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold"/>
                    <com.zaen.testly.views.settings.SettingTitleonlyView
                        android:id="@+id/pref_ifsend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:settingIcon="gmd_account_box"
                        app:settingTitle="@string/pref_if_send_title"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- GENERAL -->
            <!-- GENERAL -->

            <!--Advanced-->
            <android.support.v7.widget.CardView
                android:id="@+id/pref_advanced_card"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_spacing"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/card_elevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/small_spacing">
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/pref_advanced_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/medium_spacing"
                        android:paddingTop="@dimen/medium_spacing"
                        android:text="@string/pref_advanced_title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold"/>
                    <com.zaen.testly.views.settings.SettingTitleonlyView
                        android:id="@+id/pref_provider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/small_spacing"
                        android:paddingBottom="@dimen/small_spacing"
                        android:visibility="visible"
                        app:settingIcon="faw-user-secret"
                        app:settingTitle="@string/pref_provider_title"/>
                    <com.zaen.testly.views.settings.SettingView
                        android:id="@+id/pref_developer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:settingCaption="@string/pref_developer_caption"
                        app:settingIcon="faw-cog"
                        app:settingTitle="@string/pref_developer_title"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>